assets/css/style.css
body {
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  font-size: 18px;
  line-height: 34px;
  color: #777;
  background-image: url("../images/brickwall/brickwall_@2X.png");
  margin: 0 auto;
}

* {
  box-sizing: border-box;
}

/* general */

.container {
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  clear: both;
}





h1,
h2,
h3,
p {
  margin-bottom: 20px;
   
   
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #1D2F3E;
}

p:last-child {
  margin-bottom: 0;
}

h1,
h2,
h3 {
  font-family: Georgia, Times, "Times New Roman", serif;
  font-weight: 700;
  color: #1D2F3E;
}

h1 {
  padding-bottom: 20px;
    font-size: 30px;
    line-height: 49px;
    border-bottom: 3px solid #1D2F3E;
    font-style: oblique;
  
}

h2,
h3 {
  font-size: 22px;
}

/* header */

#masthead {
  position: fixed;
  z-index: 99;
  width: 100%;
  margin: 0 0 30px;
  overflow: auto;
  color: #fff;
  background: #1D2F3E;
  border-bottom: 2px solid #ccc;
}

#logo {
  float: left;
  width: 250px;
  height: 90px;
  font-family: Georgia, Times, "Times New Roman", serif;
  font-size: 30px;
  font-weight: 700;
  line-height: 90px;
  color: #fff;
  text-align: center;
  text-decoration: none;
  background: #4aaaa5;
}

nav {
  float: right;
  margin-top: 25px;
}

nav a {
  display: inline-block;
  padding-left: 15px;
  margin-left: 15px;
  line-height: 18px;
  color: #999;
  text-decoration: none;
  border-left: 1px solid #efefef;
}

nav a:first-child {
  border-left: 0 none;
}

#bio-image {
  padding-top: 0.5em;
  padding-left: 0em;
  padding-right: 1em;
  padding-bottom: 0em;
  float: left;
}
/* footer */

footer {
  padding: 30px 0;
  clear: both;
  font-size: 15px;
  color: #fff;
  color: #ccc;
  text-align: center;
  background: #1D2F3E;
  border-top: 8px solid #4aaaa5;
  height: 50px;
}

h3, h2 {
  padding-bottom: 20px;
  margin-bottom: 15px;
  line-height: 22px;
  border-bottom: 2px solid #eee;
}

/* main */

#main-container {
  padding-top: 130px;
  min-height: calc(100vh - 70px);
}

.main-section {
  float: left;
  width: 100%;
  max-width: 960px;
  padding: 30px;
  margin: 0 0 40px;
  background: #C9E1C1;
  border: 1px solid #666666;
  
}

/* portfolio page */

.work {
  position: relative;
  float: left;
  width: 274px;
  margin: 20px 0 25px;
  overflow: auto;
}

.work:nth-child(even) {
  margin-right: 40px;
}

.work img {
  width: 100%;
  border: 0 none;
  opacity: 0.8;
}

.work h3 {
  position: absolute;
  bottom: 20px;
  width: 100%;
  padding: 15px;
  margin-bottom: 0;
  font-weight: 300;
  line-height: 30px;
  color: #fff;
  text-align: center;
  background: #4aaaa5;
  border-bottom: 0;
}

.auth-image {
  float: left;
  width: 200px;
  height: auto;
  margin-top: 10px;
  margin-right: 25px;
}

/* contact page */

#contact-form ul {
  margin-bottom: 20px;
}

#contact-form li {
  margin-bottom: 10px;
}

label,
input[type=text],
input[type=email],
textarea {
  display: block;
  width: 100%;
}

input[type=text],
input[type=email],
textarea {
  height: 35px;
  padding: 0 10px;
  font-size: 14px;
  border: 1px solid #ddd;
}

textarea {
  height: 200px;
}

input[type=submit] {
  padding: 10px 30px;
  font-size: 18px;
  color: #fff;
  cursor: pointer;
  background: #4aaaa5;
  border: 0 none;
}

@media only screen and (max-width: 980px){
  .container {
    padding: 0 20px;
    max-width: 768px;
  }
  #main-container {
    padding-top: 130px;
  }
  .main-section {
    max-width:420px;
  }
  .work {
    width: 100%;
  }
  .auth-image {
    width: 100%;
    margin-bottom:20px;
  }
}

@media only screen and (max-width:768px) {
  .main-section, .sidebar {
    max-width:100%
  }

  #main-container {
    overflow:auto;
  }
  .sidebar {
    margin-bottom:40px;
  }

  .work {
    widows: 47%;
    margin-bottom:10px;
  }

  .work:nth-child(even) {
    margin-right: 0;
  }

  .work:nth-child(odd){
    float: right;
  }
  .auth-image {
    width:50%;
  }
}

@media only screen and (max-width: 640px){
  #masthead {
    position: static;
    margin-bottom: 20px;
  }
  header.container {
padding:0;
  }

  #main-container {
    padding-top: center;
  }
  #logo, .work, .auth-image {
    width:100%;
  }
  nav {
    text-align-last: center;
    width:100%;
    margin: 15px 0;
  }
  nav a {
    width: 30%;
    padding-left:0;
    margin-left:0;
  }
}

